--- a/A1/Lsg/main.html
+++ b/A1/Lsg/main.html
@@ -132,6 +132,15 @@
          </table>
          </div>
 
-         <footer id="group_footer"> here goes the footer </footer>
+         <footer id="group_footer">
+                 <div class="footer_left_container">
+                         Copyright &copy; 2015 world_data <br>
+                         First course exercise HTML, CSS and JS of the lecture Web and Multimedia Engineering
+                 </div>
+                 <div class="footer_right_container">
+                         The solution has been created by:<br>
+                         Andr&eacute; K&uuml;hnert (s6510611) and Nobody - Team 45
+                 </div>
+         </footer>
 </body>
 </html>
