--- a/A1/Lsg/main.html
+++ b/A1/Lsg/main.html
@@ -88,7 +88,11 @@
 
                          <tr>
                                          <th>ID</th>
-                                         <th onclick="sort('data_table_1', 1)">Country</th>
+                                         <th>
+                                                 Country
+                                                 <Button class="sort_button" onclick="sort('data_table_1', 1, 0)"><i class="fa fa-angle-down"></i></Button>
+                                                 <Button class="sort_button" onclick="sort('data_table_1', 1, 1)"><i class="fa fa-angle-up"></i></Button>
+                                         </th>
                                          <th>birth rate /1000</th>
                                          <th>cellphones /100</th>
                                          <th>children / woman</th>
@@ -101,7 +105,7 @@
                                          <td>001</td>
                                          <td>Brazil</td>
                                          <td>16.405</td>
-                                         <td>99.99999999</td>
+                                         <td>99.99999998</td>
                                          <td>1.862</td>
                                          <td>2201.808724</td>
                                          <td>4424.758692</td>
@@ -119,7 +123,7 @@
                          <td>003</td>
                          <td>USA</td>
                          <td>16.405</td>
-                         <td>90.01936334</td>
+                         <td>91.019363234</td>
                          <td>1.862</td>
                          <td>2201.808724</td>
                          <td>4424.758692</td>
@@ -128,7 +132,7 @@
                          <td>004</td>
                          <td>Bosnia</td>
                          <td>16.405</td>
-                         <td>90.01936334</td>
+                         <td>92.01936338</td>
                          <td>1.862</td>
                          <td>2201.808724</td>
                          <td>4424.758692</td>
