--- a/A1/Lsg/main.html
+++ b/A1/Lsg/main.html
@@ -112,7 +112,7 @@
                                  </tr>
                  <tr>
                          <td>002</td>
-                         <td>Germany</td>
+                         <td>Canada</td>
                          <td>16.405</td>
                          <td>99.99999999</td>
                          <td>1.862</td>
@@ -121,7 +121,7 @@
                  </tr>
                  <tr>
                          <td>003</td>
-                         <td>USA</td>
+                         <td>Chile</td>
                          <td>16.405</td>
                          <td>91.019363234</td>
                          <td>1.862</td>
@@ -130,7 +130,196 @@
                  </tr>
                  <tr>
                          <td>004</td>
-                         <td>Bosnia</td>
+                         <td>China</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                  <tr>
+                         <td>005</td>
+                         <td>Colombia</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                                   <tr>
+                         <td>006</td>
+                         <td>Ecuador</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>007</td>
+                         <td>Egypt</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                                   <tr>
+                         <td>008</td>
+                         <td>Finland</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>009</td>
+                         <td>France</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>010</td>
+                         <td>Germany</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>011</td>
+                         <td>Iceland</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>012</td>
+                         <td>Iraq</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>013</td>
+                         <td>Japan</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>014</td>
+                         <td>Kazakhstan</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>015</td>
+                         <td>Mexico</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>016</td>
+                         <td>New Zealand</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>017</td>
+                         <td>Nigeria</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>018</td>
+                         <td>Peru</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>019</td>
+                         <td>Russia</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>020</td>
+                         <td>Saudi Arabia</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>021</td>
+                         <td>South Africa</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>022</td>
+                         <td>Sweden</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>023</td>
+                         <td>United Arab Emirates</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                 <tr>
+                         <td>024</td>
+                         <td>United Kingdom</td>
+                         <td>16.405</td>
+                         <td>92.01936338</td>
+                         <td>1.862</td>
+                         <td>2201.808724</td>
+                         <td>4424.758692</td>
+                 </tr>
+                <tr>
+                         <td>025</td>
+                         <td>United States</td>
                          <td>16.405</td>
                          <td>92.01936338</td>
                          <td>1.862</td>
