--- a/A1/Lsg/main.html
+++ b/A1/Lsg/main.html
@@ -2,10 +2,11 @@
 <html>
 <head>
          <meta charset="UTF-8">
-         <meta name="description" content="WME Aufgabe 1">
+         <meta name="title" content="">
+         <meta name="description" content="World Data Overview">
          <meta name="keywords" content="HTML,CSS,JavaScript,WME,World Data">
          <meta name="author" content="Andre Kuehnert">
-         <meta name="author" content="TODO">
+         <meta name="author" content="Fabian Boltz">
 
          <!-- CSS Reset-->
          <link rel="stylesheet" type="text/css" href="res/style/reset.css">
@@ -327,7 +328,17 @@
                          <td>4424.758692</td>
                  </tr>
                 </tbody>
-         </table>
+            </table>
+                 <div class="show_hide_buttons">
+              Show/Hide:
+               <!--  <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_1')">ID</Button>   |
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_2')">Country</Button>  |  -->
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_3')">birth rate /1000</Button>    |
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_4')">cellphones /100</Button>    |
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_5')">children / woman</Button>   |
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_6')">electric usage</Button>     |
+                 <Button title="hide column" class="hide_column_button" onclick="toggle_column('data_table_col_7')">internet usage</Button>
+              </div>
          </div>
 
          <footer id="group_footer">
@@ -337,7 +348,7 @@
                  </div>
                  <div class="footer_right_container">
                          The solution has been created by:<br>
-                         Andr&eacute; K&uuml;hnert (s6510611) and Nobody - Team 45
+                         Andr&eacute; K&uuml;hnert (s6510611) and Fabian Boltz (s3349388) - Team 45
                  </div>
          </footer>
 </body>
