--- a/A2/Lsg/index.html
+++ b/A2/Lsg/index.html
@@ -5,7 +5,7 @@
          <meta name="description" content="WME Aufgabe 1">
          <meta name="keywords" content="HTML,CSS,JavaScript,WME,World Data">
          <meta name="author" content="Andre Kuehnert">
-         <meta name="author" content="TODO">
+         <meta name="author" content="Fabian Boltz">
 
          <!-- CSS Reset-->
          <link rel="stylesheet" type="text/css" href="/res/style/reset.css">
@@ -337,7 +337,7 @@
                  </div>
                  <div class="footer_right_container">
                          The solution has been created by:<br>
-                         Andr&eacute; K&uuml;hnert (s6510611) and Nobody - Team 45
+                         Andr&eacute; K&uuml;hnert (s6510611) and Fabian Boltz (s3349388) - Team 45
                  </div>
          </footer>
 </body>
